force-app/main/default/objects/Foreign_Exchange_Deal__x/Foreign_Exchange_Deal__x.object-meta.xml
<CustomObject>
    <description>Foreign Exchange Deals</description>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>ForeignExchangeDeal</externalName>
    <label>Foreign Exchange Deal</label>
    <pluralLabel>Foreign Exchange Deals</pluralLabel>
</CustomObject>