force-app/main/default/objects/Foreign_Exchange_Deal__x/fields/Ask_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ask_Amount__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>Deal Ask Amount</description>
    <externalDeveloperName>AskAmount</externalDeveloperName>
    <label>Ask Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>