force-app/main/default/objects/Foreign_Exchange_Deal__x/fields/Ask_Currency__c.field-meta.xml
<CustomField>
    <fullName>Ask_Currency__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Ask price currency</description>
    <externalDeveloperName>AskCurrency</externalDeveloperName>
    <label>Ask Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>