force-app/main/default/objects/Foreign_Exchange_Deal__x/fields/Bid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bid_Amount__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>Deal Bid Amount</description>
    <externalDeveloperName>BidAmount</externalDeveloperName>
    <label>Bid Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>