force-app/main/default/objects/Foreign_Exchange_Deal__x/fields/Bid_Currency__c.field-meta.xml
<CustomField>
    <fullName>Bid_Currency__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Deal bid currency</description>
    <externalDeveloperName>BidCurrency</externalDeveloperName>
    <label>Bid Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>