force-app/main/default/objects/Foreign_Exchange_Deal__x/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Personal Information;Source - EBD</complianceGroup>
    <description>Customer lookup</description>
    <externalDeveloperName>CustomerId</externalDeveloperName>
    <label>Customer</label>
    <length>255</length>
    <referenceTargetField>Account.External_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Foreign Exchange Deals</relationshipLabel>
    <relationshipName>Foreign_Exchange_Deals</relationshipName>
    <type>IndirectLookup</type>
</CustomField>