force-app/main/default/objects/Foreign_Exchange_Deal__x/fields/Deal_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Deal Date</description>
    <externalDeveloperName>DealDate</externalDeveloperName>
    <label>Deal Date</label>
    <type>Date</type>
</CustomField>