force-app/main/default/objects/Foreign_Exchange_Deal__x/fields/Deal_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Foreign Exchange Deal Number</description>
    <externalDeveloperName>DealNumber</externalDeveloperName>
    <label>Deal Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>