force-app/main/default/objects/Foreign_Exchange_Deal__x/fields/Value_Date__c.field-meta.xml
<CustomField>
    <fullName>Value_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Deal value date</description>
    <externalDeveloperName>ValueDate</externalDeveloperName>
    <label>Value Date</label>
    <type>Date</type>
</CustomField>